--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,10 @@
 [package]
 name = gifsicle
-url = https://github.com/kohler/gifsicle/archive/v1.92.tar.gz
+url = https://github.com/kohler/gifsicle/archive/v1.93/gifsicle-1.93.tar.gz
 archives = 
 giturl = https://github.com/kohler/gifsicle.git
 domain = 
+alias = 
 
 [autospec]
 # build 32 bit libraries
@@ -38,6 +39,8 @@ no_autostart = false
 nodebug = false
 # disable stripping binaries
 nostrip = false
+# configure build also for openmpi
+openmpi = false
 # optimize build for size over speed
 optimize_size = false
 # set profile for pgo
